src/routes/index.module.css
.homepage {
  display: grid;
  margin: 0 auto;
}

.link {
  text-transform: uppercase;
  text-decoration: none;
  position: relative;
}

.link:hover {
  text-decoration: none;
}

.link:after {
  background: none repeat scroll 0 0 transparent;
  bottom: 0;
  content: "";
  display: block;
  height: 2px;
  left: 50%;
  position: absolute;
  background: #fff;
  transition:
    width 0.3s ease 0s,
    left 0.3s ease 0s;
  width: 0;
}
.link:hover:after {
  width: 100%;
  left: 0;
}

.logo {
  margin: 0 auto;
}

.contact {
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 0.5rem;
  font-family: "Quantico", sans-serif;
}

@media (min-width: 1180px) {
  .homepage {
    grid-template-columns: [logo] 2fr [content] repeat(7, 1fr) [contact] 3fr;
    padding: 3.75rem 0;
    row-gap: 6rem;
    column-gap: 1.25rem;
    max-width: 1180px;
  }

  .logo {
    grid-column: logo;
  }

  .heading {
    grid-column: content / span 4;
  }

  .contact {
    grid-column: contact;
    font-size: 1rem;
  }

  .avatar {
    margin: 0 auto;
  }

  .summaries {
    grid-column: content / span 6;
    display: grid;
    grid-template-columns: subgrid;
    row-gap: 6rem;
  }

  .summary {
    grid-column: span 3;
  }
}

@media (min-width: 768px) and (max-width: 1179px) {
  .homepage {
    grid-template-columns: [logo] 1fr [content-start heading-start] 1fr 1fr 1fr [heading-end] 1fr 1fr [contact-start] 1fr [content-end] 1fr [contact-end];
    column-gap: 1rem;
    row-gap: 5rem;
    padding: 2rem 1rem;
    max-width: 1179px;
  }

  .logo {
    grid-column: logo;
  }

  .heading {
    grid-column: heading-start / heading-end;
  }

  .summaries {
    grid-column: content-start / content-end;
    display: grid;
    grid-template-columns: subgrid;
    row-gap: 5rem;
  }

  .summary {
    grid-column: span 3;
  }

  .contact {
    grid-column: contact-start / contact-end;
    font-size: 0.875rem;
  }
}

@media (max-width: 767px) {
  .homepage {
    grid-template-columns: [logo content-start] 1fr [heading-start] 1fr 1fr 1fr [heading-end content-end];
    row-gap: 3.75rem;
    column-gap: 1rem;
    padding: 1.5rem 1rem;
  }

  .heading {
    grid-column: heading-start / heading-end;
  }

  .logo {
    margin: 0;
    grid-row-start: 1;
  }

  .contact {
    grid-column: content-start / content-end;
    grid-row-start: 3;
    align-items: center;
    font-size: 1.5rem;
    margin-top: 3.75rem;
  }

  .summaries {
    grid-column: content-start / content-end;
    display: grid;
    grid-template-columns: subgrid;
    row-gap: 3.75rem;
  }

  .summary {
    grid-column: 1 / -1;
  }
}

